<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_profile"
          android:title="@string/me_kebab_profile"
          android:icon="@drawable/ic_nav_me"
          app:showAsAction="never"/>
    <item android:id="@+id/action_my_submissions"
          android:title="@string/my_submissions_title"
          android:icon="@drawable/ic_inbox"
          android:visible="false"
          app:showAsAction="never"/>
    <item android:id="@+id/action_suggest_content"
          android:title="@string/me_kebab_suggest_content"
          android:icon="@drawable/ic_add"
          android:visible="false"
          app:showAsAction="never"/>
    <item android:id="@+id/action_import_youtube"
          android:title="@string/me_kebab_import_youtube"
          android:icon="@drawable/ic_import_youtube"
          app:showAsAction="never"/>
    <item android:id="@+id/action_sign_out"
          android:title="@string/me_kebab_sign_out"
          android:icon="@drawable/ic_logout"
          app:showAsAction="never"/>
</menu>
