<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/channelsFragment"
        android:icon="@drawable/ic_channels"
        android:title="@string/nav_channels"/>
    <item
        android:id="@+id/playlistsFragment"
        android:icon="@drawable/ic_stat_playlist"
        android:title="@string/nav_playlists"/>
    <item
        android:id="@+id/videosFragment"
        android:icon="@drawable/ic_stat_movie"
        android:title="@string/nav_videos"/>
    <item
        android:id="@+id/downloadsFragment"
        android:icon="@android:drawable/stat_sys_download"
        android:title="Downloads"/>
</menu>

