<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_md"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_submission_sheet_title"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textAlignment="viewStart"
                android:layout_marginBottom="@dimen/spacing_sm" />

            <TextView
                android:id="@+id/subtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_submission_sheet_subtitle"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                android:textAlignment="viewStart"
                android:layout_marginBottom="@dimen/spacing_md" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/noteLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/submit_content_note_hint"
                app:helperText="@string/submit_content_note_helper"
                app:counterEnabled="true"
                app:counterMaxLength="1000"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/noteInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:minLines="3"
                    android:maxLines="6"
                    android:maxLength="1000"
                    android:gravity="top|start" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/edit_submission_save_button" />

            <ProgressBar
                android:id="@+id/saveProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
